# cliany.site

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh.md  SECURITY.md  SKILL.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  session-optimize.md
.github/: AUTONOMOUS_FIX.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  case_proposal.yml  config.yml  feature_request.yml
.github/workflows/: auto-reproduce.yml  ci.yml  dep-upgrade-verify.yml  embodied-ci.yml  release.yml
.sisyphus/evidence/: task-3-recording-auto-mkdir.txt  task-3-recording-lifecycle.txt  task-3-recording-partial.txt
cases/: README.md  manifest.json
cases/examples/: apache-confluence-search.json  apache-jenkins-jobs.json  apache-jira-issues.json  crates-io-crate-search.json  npm-package-search.json  pypi-project-search.json  suitecrm-accounts.json
docs/: adapter-lifecycle.md  candidate-promotion-runbook.md  contributor-starter.md  good-first-issues.md  migration-0.9.md  module-ownership.md  public-roadmap.md  quickstart-10min.md  release-cadence.md  roadmap-2026-q3.md  weekly-maintainer-loop.md
docs/decisions/: 0001-opencli-alignment.md  0002-obscura-provider-compatibility.md  0003-obscura-binary-lifecycle.md  0004-obscura-provider-abstraction.md  0005-obscura-explore-gate.md  0006-obscura-three-platform-support.md  0007-v012-stability-hardening.md  0008-failure-semantics.md  0009-provider-capability-matrix.md
docs/releases/: v0.14.4-draft.md  v0.15.0-draft.md  v0.15.1-draft.md  v0.15.2-draft.md  v0.15.3-draft.md  v0.15.4-draft.md  v0.15.5-draft.md  v0.15.6-draft.md  v0.15.7-draft.md  v0.15.8-draft.md  v0.15.9-draft.md  v0.16.0-draft.md  v0.16.1-draft.md  v0.16.10-draft.md  v0.16.100-draft.md  v0.16.101-draft.md  v0.16.102-draft.md  v0.16.103-draft.md  v0.16.104-draft.md  v0.16.105-draft.md  v0.16.106-draft.md  v0.16.107-draft.md  v0.16.108-draft.md  v0.16.109-draft.md  v0.16.11-draft.md  v0.16.110-draft.md  v0.16.111-draft.md  v0.16.112-draft.md  v0.16.113-draft.md  v0.16.114-draft.md  v0.16.115-draft.md  v0.16.116-draft.md  v0.16.117-draft.md  v0.16.118-draft.md  v0.16.119-draft.md  v0.16.12-draft.md  v0.16.120-draft.md  v0.16.121-draft.md  v0.16.122-draft.md  v0.16.123-draft.md  (+254 more)
docs/superpowers/: brainstorm-next-iteration.md
docs/walkthroughs/: 2026-03-28-skill-publishing.md  2026-03-29-adapter-marketplace.md  2026-03-29-batch-execution.md  2026-03-29-cicd-pipeline.md  2026-03-29-error-recovery-ux.md  2026-03-29-generator-refactor.md  2026-03-29-headless-remote-cdp.md  2026-03-29-progress-feedback.md  2026-03-29-smart-self-healing.md  2026-03-30-python-sdk.md  2026-05-09-obscura-integration-analysis.md  obscura-experimental-guide.md  obscura-release-gates.md  obscura-test-strategy.md  v010-cdp-spike.md  v010-release-checklist.md  v010-release.md  v011-release-checklist.md  v011-release.md  v012-hardening-report.md  v012-perf.md
qa/: atom_e2e.sh  atom_part_a.sh  atom_part_b.sh  atom_part_c.sh  doctor_check.sh  e2e_real_site.sh  run_all.sh  test_action_partition.sh  test_action_validator.sh  test_atom_codegen.sh  test_atom_workflow_ref.sh  test_browser_auto_launch.sh  test_commands.sh  test_doctor_agent_md.sh  test_errors.sh  test_explore.sh  test_extend_smoke.sh  test_extract.sh  test_extract_writer.sh  test_failure_semantics.sh  test_interactive_smoke.sh  test_obscura_benchmark.sh  test_obscura_compat.sh  test_obscura_explore_friendly.sh  test_obscura_smoke.sh  test_phase_gated.sh  test_replay_smoke.sh  test_selector.sh  test_site_conversion.sh  test_structured_errors.sh  test_v010_e2e.sh  test_verify.sh
qa/fixtures/: README.md  fake_llm_diag_responses.json  fake_llm_responses.json  serve.sh
schemas/: envelope.v1.json  explain.v1.json  metadata.v3.json
scripts/: check_release_cadence.py  check_release_publication.py  extract_doctor_preflight_evidence.py  plan_next_iteration.py  publish.sh  release_readiness.py  validate_cases.py
site/: index.html  robots.txt  script.js  sitemap.xml  style.css
site/docs/: index.html
src/cliany_site/: AGENTS.md  __init__.py  action_runtime.py  agent_md.py  atomic_io.py  capability.py  checkpoint.py  cli.py  config.py  diagnostic.py  envelope.py  errors.py  extract_quality.py  extract_writer.py  healer.py  healthcheck.py  loader.py  logging_config.py  marketplace.py  metadata.py  progress.py  registry.py  repair_cache.py  repair_prompts.py  report.py  response.py  sdk.py  server.py  session.py  snapshot.py
tests/: conftest.py  test_action_runtime_branches.py  test_action_runtime_extract_error.py  test_action_runtime_routing.py  test_adapter_lifecycle_docs.py  test_agent_md.py  test_atomic_io.py  test_axtree_meta_output.py  test_axtree_pruning.py  test_axtree_pruning_integration.py  test_batch.py  test_browser_generated_action_commands.py  test_browser_part_a.py  test_browser_part_b.py  test_browser_part_c.py  test_browser_providers.py  test_candidate_promotion_runbook_docs.py  test_capability.py  test_cases_command.py  test_cases_manifest.py  test_cdp_capabilities.py  test_check.py  test_checkpoint.py  test_chrome_provider.py  test_ci_case_catalog.py  test_ci_extract_quality.py  test_cli_integration.py  test_codegen_v2.py  test_compounds.py  test_compounds_integration.py  test_config.py  test_console_capture.py  test_contributor_docs.py  test_cross_platform_lock.py  test_diagnostic.py  test_doctor.py  test_doctor_checks.py  test_doctor_preflight_evidence.py  test_doctor_v3.py  test_engine_capability.py  (+76 more)
tests/benchmarks/: conftest.py  test_dataset_loads.py  test_generation_regression.py  test_sentinel_effectiveness.py
tests/binary/: test_process_pid_race.py
tests/codegen/: test_merger_fsync.py
tests/commands/: test_obscura_download_retry.py
tests/embodied/: conftest.py  test_explore_embodied.py  test_server_fixture.py
tests/explorer/: test_interactive_errors.py
tests/fixtures/: README.md  fake_llm.py  legacy_metadata.json  metadata.v2.sample.json  sample_selector_map.json  test_fake_llm.py  (+1 more)
(+107 files in other folders)
