[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cliany-site"
version = "0.6.0"
requires-python = ">=3.11"
dependencies = [
    "browser-use",
    "click",
    "rich",
    "langchain-openai",
    "langchain-anthropic",
    "python-dotenv",
    "textual",
    "cryptography>=46.0.5",
    "keyring>=25.7.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.14"]
dev = ["ruff>=0.11", "mypy>=1.15"]

[project.scripts]
cliany-site = "cliany_site.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/cliany_site"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"src/cliany_site/explorer/prompts.py" = ["E501"]
"src/cliany_site/codegen/generator.py" = ["E501"]
"src/cliany_site/codegen/templates.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cliany_site"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
