[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cliany-site"
version = "0.16.46"
description = "Turn browser workflows into reusable site-specific CLI commands."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "pearjelly", email = ""}]
keywords = ["browser", "cli", "automation", "cdp", "llm", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "browser-use",
    "click",
    "rich",
    "langchain-openai",
    "langchain-anthropic",
    "python-dotenv",
    "textual",
    "cryptography>=46.0.5",
    "keyring>=25.7.0",
    "portalocker>=2.8",
]

[project.optional-dependencies]
vision = ["Pillow>=10.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.14", "pytest-cov>=5.0", "pytest-benchmark>=4.0"]
dev = ["ruff>=0.11", "mypy>=1.15", "types-pyyaml>=6.0"]

[project.scripts]
cliany-site = "cliany_site.cli:cli"

[project.urls]
Homepage = "https://www.cliany.site"
Repository = "https://github.com/pearjelly/cliany.site"
Documentation = "https://www.cliany.site"
"Bug Tracker" = "https://github.com/pearjelly/cliany.site/issues"
Changelog = "https://github.com/pearjelly/cliany.site/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/cliany_site"]
artifacts = ["src/cliany_site/schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=cliany_site --cov-report=term-missing --cov-report=xml"
markers = [
    "embodied: headless Chrome 具身集成测试",
    "perf: performance benchmark tests (run manually with --benchmark-only)",
]

[tool.coverage.run]
source = ["src/cliany_site"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"src/cliany_site/explorer/prompts.py" = ["E501"]
"src/cliany_site/codegen/generator.py" = ["E501"]
"src/cliany_site/codegen/templates.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cliany_site"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pyright>=1.1.409",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-mock>=3.15.1",
    "types-pyyaml>=6.0.12.20250915",
]
